ensure header title does not wrap at desktop size

--- a/frontend/src/components/Header.module.css
+++ b/frontend/src/components/Header.module.css
@@ -21,6 +21,12 @@
   flex-wrap: nowrap;
 }
 
+@media (max-width: 63.99em) {
+  .title {
+    margin-left: var(--grid-gutter-width);
+  }
+}
+
 .logo {
   margin-right: 0.5rem;
   width: 8.875rem;
@@ -30,6 +36,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  white-space: nowrap;
 }
 
 .logoText {
